No longer body scrolling, but jumpy now

--- a/TeamBIKES/client/s_Style/Slide_In_Panel.styl
+++ b/TeamBIKES/client/s_Style/Slide_In_Panel.styl
@@ -86,6 +86,10 @@ html
 //     h1.cd
 //       font-size(32px)
 
+.noscroll
+  // overflow: hidden
+  position: fixed
+
 .cd-panel
   &::after, &::before
     content: ''
